--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "svelte-markdown",
   "description": "A markdown renderer for Svelte",
-  "version": "0.4.1",
+  "version": "0.5.0",
+  "packageManager": "yarn@4.4.0",
+  "engines": {
+    "node": ">=20"
+  },
   "main": "dist/sveltemarkdown.js",
   "module": "dist/sveltemarkdown.es.js",
   "jsnext:main": "dist/sveltemarkdown.es.js",
@@ -30,25 +34,25 @@
     "test:watch": "vitest watch"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^4.0.3",
-    "eslint": "^7.20.0",
-    "eslint-plugin-svelte": "^2.32.2",
-    "jsdom": "^22.1.0",
-    "prettier": "^2.2.1",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-filesize": "^10.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sirv-cli": "^1.0.11",
-    "svelte": "^4.0.5",
-    "svelte-eslint-parser": "^0.32.1",
-    "vite": "^4.4.7",
-    "vitest": "^0.33.0"
+    "@sveltejs/vite-plugin-svelte": "2.5.3",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/svelte": "4.2.3",
+    "eslint": "7.32.0",
+    "eslint-plugin-svelte": "2.43.0",
+    "jsdom": "22.1.0",
+    "prettier": "2.8.8",
+    "rollup-plugin-analyzer": "4.0.0",
+    "rollup-plugin-filesize": "10.0.0",
+    "rollup-plugin-terser": "7.0.2",
+    "sirv-cli": "1.0.14",
+    "svelte": "4.2.19",
+    "svelte-eslint-parser": "0.32.2",
+    "vite": "4.5.3",
+    "vitest": "0.33.0"
   },
   "dependencies": {
-    "@types/marked": "^5.0.1",
-    "marked": "^5.1.2"
+    "@types/marked": "5.0.2",
+    "marked": "7.0.5"
   },
   "peerDependencies": {
     "svelte": "^4.0.0"
