--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "rollup-plugin-terser": "7.0.2",
     "sirv-cli": "1.0.14",
     "svelte": "4.2.19",
-    "svelte-eslint-parser": "0.32.2",
+    "svelte-eslint-parser": "0.41.0",
     "vite": "4.5.3",
     "vitest": "0.33.0"
   },
   "dependencies": {
     "@types/marked": "5.0.2",
-    "marked": "7.0.5"
+    "github-slugger": "2.0.0",
+    "marked": "14.1.0"
   },
   "peerDependencies": {
     "svelte": "^4.0.0"
