--- a/package.json
+++ b/package.json
@@ -34,26 +34,28 @@
     "test:watch": "vitest watch"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.5.3",
+    "@sveltejs/vite-plugin-svelte": "3.1.2",
     "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/svelte": "4.2.3",
-    "eslint": "7.32.0",
+    "@testing-library/svelte": "5.2.1",
+    "eslint": "9.9.1",
     "eslint-plugin-svelte": "2.43.0",
-    "jsdom": "22.1.0",
-    "prettier": "2.8.8",
+    "jsdom": "25.0.0",
+    "prettier": "3.3.3",
     "rollup-plugin-analyzer": "4.0.0",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-terser": "7.0.2",
-    "sirv-cli": "1.0.14",
+    "sirv-cli": "2.0.2",
     "svelte": "4.2.19",
     "svelte-eslint-parser": "0.41.0",
-    "vite": "4.5.3",
-    "vitest": "0.33.0"
+    "vite": "5.4.2",
+    "vitest": "2.0.5"
   },
   "dependencies": {
-    "@types/marked": "5.0.2",
+    "@types/marked": "6.0.0",
     "github-slugger": "2.0.0",
-    "marked": "14.1.0"
+    "marked": "14.1.0",
+    "micromark": "4.0.0",
+    "micromark-extension-math": "3.1.0"
   },
   "peerDependencies": {
     "svelte": "^4.0.0"
