--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
   "dependencies": {
     "@types/marked": "6.0.0",
     "github-slugger": "2.0.0",
-    "marked": "14.1.0",
-    "micromark": "4.0.0",
-    "micromark-extension-math": "3.1.0"
+    "marked": "14.1.0"
   },
   "peerDependencies": {
     "svelte": "^4.0.0"
