--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,15 +1,7 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Publish to NPM
-
-# on:
-#   release:
-#     types: [created]
 
 on:
   push:
-    # branches: [master] 
     tags:
       - '*'
 
@@ -17,26 +9,45 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: corepack enable
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 22
-      - run: yarn
-      - run: yarn test
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Enable Corepack
+        run: corepack enable
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'yarn'
+          
+      - name: Install dependencies
+        run: yarn
+        
+      - name: Run tests
+        run: yarn test
 
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: corepack enable
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 22
-        cache: 'yarn'
-        registry-url: https://registry.npmjs.org/
-    - run: yarn workspaces focus --all --production
-    - run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Enable Corepack
+        run: corepack enable
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'yarn'
+          registry-url: https://registry.npmjs.org/
+          
+      - name: Install production dependencies
+        run: yarn workspaces focus --all --production
+        
+      - name: Publish package
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
