--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-marked",
   "description": "A markdown renderer for Svelte.",
-  "version": "0.5.6",
+  "version": "0.5.7",
   "packageManager": "yarn@4.4.0",
   "engines": {
     "node": ">=18"
@@ -40,8 +40,8 @@
     "@sveltejs/vite-plugin-svelte": "3.1.2",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/svelte": "5.2.1",
-    "eslint": "9.9.1",
-    "eslint-plugin-svelte": "2.43.0",
+    "eslint": "9.10.0",
+    "eslint-plugin-svelte": "2.44.0",
     "jsdom": "25.0.0",
     "prettier": "3.3.3",
     "rollup-plugin-analyzer": "4.0.0",
@@ -49,17 +49,20 @@
     "rollup-plugin-terser": "7.0.2",
     "sirv-cli": "2.0.2",
     "svelte": "4.2.19",
-    "svelte-eslint-parser": "0.41.0",
-    "vite": "5.4.3",
-    "vitest": "2.0.5"
+    "svelte-eslint-parser": "0.41.1",
+    "vite": "5.4.6",
+    "vitest": "2.1.1"
   },
   "dependencies": {
     "@types/marked": "6.0.0",
     "github-slugger": "2.0.0",
-    "marked": "14.1.1"
+    "marked": "14.1.2"
   },
   "peerDependencies": {
     "svelte": "^4.0.0"
+  },
+  "resolutions": {
+    "tough-cookie": "next"
   },
   "types": "./types/index.d.ts"
 }
